# rust-graphics-hello-triangle

./: .gitignore  Cargo.toml  README.md  android-build.sh
src/: lib.rs  main.rs
