[package]
name = "rust-graphics-hello-triangle"
version = "0.1.0"
authors = ["Hossein Noroozpour <hossein.noroozpour@gmail.com>"]

[dependencies]
rust-graphics-gl = { version = "*", path = "../rust-graphics-gl" }
rust-graphics-main = { version = "*", path = "../rust-graphics-main" }

[lib]
path = "src/main.rs"
name = "rust_graphics_lib"
crate-type = ["staticlib"]

[features]
verbose-log = ["rust-graphics-gl/verbose-log"]